@@ -2,6 +2,7 @@
 ---------------------------
 * added ArangoDatabase.create()
 * added ArangoCollection.create() && .create(CollectionCreateOptions)
+* added ArangoGraph.create(Collection<EdgeDefinition>) && .create(Collection<EdgeDefinition>, GraphCreateOptions)
 * extracted interfaces for ArangoDB API
 * fixed aquireHostList bug when using active failover
 * added field AqlFunctionEntity.isDeterministic
